--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -58,12 +58,12 @@
 %
 %\include{conclusions}
 %
-%\appendix
+\appendix
 %\include{rbffd_avoid_pole_singularities}
 %\include{rbffd_weights_on_sphere}
 %\include{performance_content/scaling/cut_from_distributed_solver}
-%\include{performance_content/optimizations}
-%\include{performance_content/hardware}
+\include{performance_content/optimizations}
+\include{performance_content/hardware}
 
 %\include{stokes_revisited}
 
